# ModelVision

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  cli.md  custom-graphs.md  getting-started.md  index.md  styling.md
docs/assets/: extra.css  fonts.css  mathjax-config.js
docs/cookbook/: cli.md  huggingface.md  index.md  jax.md  keras.md  onnx.md  sklearn.md  torch.md
examples/: 01_pytorch_basic.py  02_styling.py  03_outputs.py  04_layouts.py  05_huggingface.py  06_sklearn.py  07_onnx.py  08_tricky.py  09_ir.py  10_notebook.py  11_cli.py  12_volumetric.py  13_all_frameworks.py  14_visualtorch_gallery.py  15_visualtorch_graph_gallery.py  README.md  hf_bert.py  sklearn_pipeline.py  torch_vgg.py
modelvision/: __init__.py  __main__.py  _api.py  cli.py
modelvision/core/: __init__.py  _optional.py  color.py  exceptions.py  ids.py  ir.py  palettes.py  postprocess.py  shape_prop.py  style.py  validation.py
modelvision/inspectors/: __init__.py  auto.py  base.py  gguf_inspector.py  hf_templates.py  huggingface_inspector.py  jax_inspector.py  keras_inspector.py  onnx_inspector.py  sklearn_inspector.py  torch_inspector.py
modelvision/layout/: __init__.py  flow.py  hierarchical.py  horizontal.py  radial.py  shape_size.py  vertical.py
modelvision/renderers/: __init__.py  html_renderer.py  matplotlib_renderer.py  raster.py  svg_renderer.py
modelvision/themes/: __init__.py  dark.py  grayscale.py  high_contrast.py  light.py  pastel.py
tests/: conftest.py  regen_goldens.py  test_auto_detect.py  test_cli.py  test_cli_extra.py  test_cli_llm.py  test_color.py  test_coverage_gaps.py  test_edge_cases.py  test_examples.py  test_gguf_inspector.py  test_golden.py  test_html_renderer.py  test_huggingface_extra.py  test_huggingface_inspector.py  test_ids.py  test_import.py  test_ir.py  test_keras_inspector.py  test_layout.py  test_layouts_m3.py  test_matplotlib_renderer.py  test_onnx_inspector.py  test_postprocess.py  test_sklearn_inspector.py  test_style.py  test_svg_extra.py  test_svg_renderer.py  test_torch_inspector.py  test_validation.py  test_visualtorch_features.py
