[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "modelvision"
dynamic = ["version"]
description = "Framework-agnostic neural network architecture visualizer — publication-quality diagrams without executing a forward pass."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Jerry Abimbola" }]
keywords = [
    "neural network",
    "visualization",
    "pytorch",
    "tensorflow",
    "keras",
    "jax",
    "flax",
    "huggingface",
    "transformers",
    "sklearn",
    "onnx",
    "diagram",
    "svg",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "networkx>=3.0",
    "svgwrite>=1.4",
    "click>=8.0",
    "Pillow>=10.0",
    "rich>=13.0",
    "typing-extensions>=4.9",
]

[project.optional-dependencies]
torch       = ["torch>=2.0", "torchvision>=0.15"]
tensorflow  = ["tensorflow>=2.12"]
jax         = ["jax>=0.4", "flax>=0.7", "dm-haiku>=0.0.10"]
huggingface = ["transformers>=4.30"]
sklearn     = ["scikit-learn>=1.3"]
onnx        = ["onnx>=1.15"]
pdf         = ["cairosvg>=2.7"]
plot        = ["matplotlib>=3.7"]
all = [
    "modelvision[torch,tensorflow,jax,huggingface,sklearn,onnx,pdf,plot]",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "hypothesis>=6",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "lxml>=5",
    "beautifulsoup4>=4.12",
]
docs = ["mkdocs-material>=9", "mkdocstrings[python]>=0.25"]

[project.scripts]
mvision = "modelvision.cli:main"

[project.urls]
Homepage = "https://github.com/pianistprogrammer/ModelVision"
Issues   = "https://github.com/pianistprogrammer/ModelVision/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["modelvision"]

[tool.hatch.build.targets.wheel.force-include]
"modelvision/py.typed" = "modelvision/py.typed"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
markers = [
    "slow: long-running tests, excluded by default",
    "torch: requires the torch extra",
    "keras: requires the tensorflow extra",
    "jax: requires the jax extra",
    "hf: requires the huggingface extra",
    "sklearn: requires the sklearn extra",
    "onnx: requires the onnx extra",
    "golden: SVG golden regression tests (canonical env only)",
]

[tool.coverage.run]
branch = true
source = ["modelvision"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
# The ``all`` extras matrix cell in CI is the coverage gate — it exercises
# every inspector and renderer. Per-extra cells naturally cover only their
# framework, so the fail_under threshold is enforced by the CI ``coverage``
# job (not this file) via ``pytest --cov-fail-under=85``.
skip_covered = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line-length handled by formatter
    "E741",   # single-char names like ``l`` used deliberately in local scope
    "RUF001", # allow ambiguous unicode in strings — display characters (× → etc.)
    "RUF002", # ditto in docstrings
    "RUF003", # ditto in comments
    "RUF007", # zip(a, a[1:]) is clearer than itertools.pairwise for our use
    "RUF059", # tuple-unpack destructure — allow named throwaways
    "SIM105", # suppress-Exception blocks are noise for one-liners
    "SIM108", # ternary rewrite hurts multi-line readability
    "UP035",  # typing.Callable deprecation nudge is version-sensitive
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "F841",   # ``x = pytest.importorskip(...)`` idiom is intentional
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# Framework imports are optional; treat their absence as untyped.
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Internal helpers with intentionally loose typing — these use dataclass
# internals (__dataclass_fields__), dynamic dispatch, and unparameterised
# generics in ways that are correct at runtime but noisy for strict mypy.
[[tool.mypy.overrides]]
module = [
    "modelvision.core.shape_prop",
    "modelvision.core.postprocess",
    "modelvision.layout.radial",
    "modelvision.layout.flow",
    "modelvision.layout.shape_size",
    "modelvision.renderers.svg_renderer",
    "modelvision.inspectors.gguf_inspector",
    "modelvision.inspectors.torch_inspector",
    "modelvision.cli",
]
warn_unused_ignores = false
disallow_untyped_defs = false
disable_error_code = ["type-arg", "no-any-return", "untyped-decorator", "misc", "assignment", "attr-defined", "operator", "union-attr"]

# These modules pass NodeStyle (a subclass of StyleSpec) where StyleSpec is
# expected — covariant in practice but invariant under strict dict typing.
# Using Mapping would be the full fix; for now suppress the known arg-type
# mismatches on internal call sites.
[[tool.mypy.overrides]]
module = [
    "modelvision._api",
    "modelvision.renderers.html_renderer",
    "modelvision.renderers.matplotlib_renderer",
    "modelvision.core.validation",
    "modelvision.core.style",
    "modelvision.inspectors.huggingface_inspector",
]
warn_unused_ignores = false
disable_error_code = ["arg-type", "override", "unused-ignore"]

